<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/brown2">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="295dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/me"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/biodata_judul"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="140dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:text="@string/nama_bio"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:text="@string/nim_bio"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:text="@string/kelas_bio"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:text="@string/alamat_bio"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:text="@string/e_mail_bio"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="130dp"
        android:text="@string/kembali_profile"
        />

</LinearLayout>
